<resources>
    <string name="app_name">Congress</string>
    <string name="app_version">3.9.7</string>
    <string name="app_version_older">Version 3.9.5</string>
    <string name="app_package_name">com.sunlightlabs.android.congress</string>
    <string name="search_bills_settings">Bills</string>
    <string name="search_people_settings">People</string>
    <string name="search_votes_settings">Votes</string>
    <string name="first_time_twitter">Tap to the right of a tweet to reply using a Twitter app.</string>
    <string name="no_market_installed">You need to have the Android Market in order to donate.</string>
    <string name="empty_zipcode">No legislators found for your zipcode.</string>
    <string name="empty_location">No legislators found for your location.</string>
    <string name="empty_last_name">No legislators found by that last name.</string>
    <string name="empty_general">No legislators found.</string>
    <string name="empty_bills_sponsored">This legislator has not sponsored any bills.</string>
    <string name="empty_bills">There are no bills that match your search.</string>
    <string name="empty_votes">This legislator has not cast any recent votes.</string>
    <string name="upcoming_header">COMING UP</string>
    <string name="upcoming_loading">Finding out…</string>
    <string name="upcoming_empty">No details on upcoming activity right now.</string>
    <string name="upcoming_error">Error loading upcoming activity.</string>
    <string name="bill_no_title">(no title)</string>
    <string name="bill_no_title_yet">(title not yet known)</string>
    <string name="bill_no_sponsor">This bill does not have a sponsor.</string>
    <string name="bill_no_sponsor_yet">Bill\'s sponsor not yet known.</string>
    <string name="vote_no_voters_yet">Vote details not yet known.</string>
    <string name="votes_error">Error loading votes.</string>
    <string name="vote_results_header">RESULTS</string>
    <string name="error_loading_favorites">There was a problem loading your starred bills and legislators. If the problem persists, try un-starring and re-starring them.</string>
    <string name="loading_more_general">Loading more…</string>
    <string name="google_news_branding">Powered by Google</string>
    <string name="news_loading">Plucking news from the air…</string>
    <string name="error_fetching_news">There was an error while fetching news.</string>
    <string name="news_empty">No recent news found.</string>
    <string name="twitter_loading">Plucking tweets from the air…</string>
    <string name="twitter_empty">No tweets found.</string>
    <string name="twitter_error">Error loading tweets.</string>
    <string name="twitter_rate_limit">You\'ve been reading too many tweets! Twitter\'s called a timeout for a little bit, check back later.</string>
    <string name="youtube_loading">Plucking videos from the air…</string>
    <string name="youtube_empty">No videos found.</string>
    <string name="bills_loading">Plucking bills from the air…</string>
    <string name="legislators_loading">Searching for lawmakers…</string>
    <string name="legislators_loading_location">Found your location, searching…</string>
    <string name="legislators_error">Error loading lawmakers.</string>
    <string name="legislators_loading_cosponsors">Loading cosponsors…</string>
    <string name="votes_loading">Plucking votes from the air…</string>
    <string name="bill_loading">Plucking bill from the air…</string>
    <string name="bill_cosponsor_other_singular">more</string>
    <string name="bill_cosponsor_other_plural">more</string>
    <string name="bill_summary_header">SUMMARY</string>
    <string name="bill_history_loading">Plucking the bill\'s history from the air…</string>
    <string name="bill_votes_loading">Plucking the bill\'s votes from the air…</string>
    <string name="legislator_loading">Plucking a person from the air…</string>
    <string name="loading">Loading…</string>
    <string name="bills_empty_code">No bills found by that bill code.</string>
    <string name="bills_empty_sponsor">No bills found by this person.</string>
    <string name="bills_empty_search_newest">No bills found by that search.\n\nYou can still tap the bar below to be notified when a match comes up.</string>
    <string name="bills_empty_search_relevant">No bills found by that search.\n\nWhen searching by relevance, searching is limited to the current session of Congress.\n\nBills from previous sessions of Congress will not appear.</string>
    <string name="votes_empty_voter">No votes found by this person.</string>
    <string name="votes_empty_search_newest">No votes found by that search.\n\nYou can still tap the bar below to be notified when a match comes up.</string>
    <string name="votes_empty_search_relevant">No votes found by that search.\n\nWhen searching by relevance, searching is limited to the current session of Congress.\n\Votes from previous sessions of Congress will not appear.</string>
   	<string name="committees_title">Committees</string>
    <string name="committees_loading">Plucking committees from the air…</string>
    <string name="committees_empty">No committees found.</string>
    <string name="committees_error">Error loading committees.</string>
    <string name="legislator_no_committees">Belongs to no committees.</string>
    <string name="floor_updates_title">The Floor</string>
    <string name="floor_updates_loading">Loading latest from the floor…</string>
    <string name="floor_updates_error">Error loading the latest from the floor.</string>
    <string name="floor_updates_related_roll">Related vote</string>
    <string name="floor_updates_related_bill">Related bill</string>
    <string name="hearings_title">Upcoming Senate Hearings</string>
    <string name="hearings_loading">Loading upcoming hearings…</string>
    <string name="hearings_empty">No known upcoming hearings.</string>
    <string name="hearings_error">Error loading upcoming hearings.</string>
    <string name="hearings_no_calendar">Unable to find a standard Calendar app on this device.</string>
    <string name="hearings_header">Tap a hearing to add it your calendar.</string>
    <string name="voting_record">Voting Record</string>
    <string name="sponsored_bills">Sponsored Bills</string>
    <string name="committees">Committees</string>
    <string name="loading_committees">Loading committees…</string>
    <string name="district_map">District Map</string>
    <string name="view_legislator_district">View Legislator District</string>
    <string name="error_connection">Couldn\'t connect to the network. Please try again when you have a connection.</string>
    <string name="connection_failed">Connection failed. Press refresh to try again.</string>
    <string name="vote_not_found">Vote details not yet available.</string>
    <string name="about_button">Cool</string>
    <string name="first_button">Awesome</string>
    <string name="explanation_button">Wow</string>
    <string name="changelog_button">Awesome</string>
    <string name="changelog_title_prefix">New In Version</string>
    <string name="explanation_title">Notifications</string>
    <string name="explanation_1">You can be notified of new votes, bills, and all sorts of things.</string>
    <string name="explanation_2">First, enable this feature, then find what you\'re interested in and tap the bar at the bottom.</string>
    <string name="explanation_3">Please note:</string>
    <string name="explanation_3a">New bills can be delayed up to a day, votes up to an hour.</string>
    <string name="explanation_3b">Other updates (tweets, videos, news) are not delayed.</string>
    <string name="explanation_3c">Congress operates in bursts, so days may go by without any activity.</string>
    <string name="first_tip_1_header">Follow your representatives.</string>
    <string name="first_tip_1_body">Use your location to find, track, and call your representatives.</string>
    <string name="first_tip_2_header">Keep track of what\'s happening.</string>
    <string name="first_tip_2_body">See what\'s coming up, and what just went down.</string>
    <string name="first_tip_3_header">Stay up to date.</string>
    <string name="first_tip_3_body">Get notified in real time of new votes, floor activity, and more.</string>
    <string name="menu_main_bills">Bills</string>
    <string name="menu_main_votes">Votes</string>
    <string name="menu_main_legislators">People</string>
    <string name="menu_main_committees">Committees</string>
    <string name="menu_main_floor_updates">The Floor</string>
    <string name="menu_main_hearings">Senate Hearings</string>
    <string name="search_legislators_hint">Last name or zip code</string>
    <string name="search_legislators_label">Lawmakers</string>
    <string name="search_bills_hint">Search bills</string>
    <string name="search_bills_label">Bills</string>
    <string name="search_bills_recent">Most Recent</string>
    <string name="search_bills_relevant">Most Relevant</string>
    <string name="search_votes_hint">Search votes</string>
    <string name="search_votes_label">Votes</string>
    <string name="search_votes_recent">Most Recent</string>
    <string name="search_votes_relevant">Most Relevant</string>
    <string name="menu_legislators_no_favorites">Any senators and representatives you follow will be added here.\n\nTo find people, tap the compass button above to use your location, or the search button to search by zip code or last name.\n\nYou can also slide over to the right to find people by state, or by the chamber they\'re a part of.\n\nWhile viewing a person, follow them by tapping the star in the top right corner.</string>
    <string name="menu_bills_no_favorites">Any bills you follow will be added here.\n\nTo find bills, use the search button up top, or slide over to the right to see what bills just got introduced, or signed into law.\n\nWhile viewing a bill, follow it by tapping the star in the top right corner.</string>
    <string name="menu_bills_favorite">Starred</string>
    <string name="menu_bills_law">Laws</string>
    <string name="menu_bills_law_subscription">Recent Laws</string>
    <string name="menu_bills_recent">Recent</string>
    <string name="menu_bills_recent_subscription">Recent Bills</string>
    <string name="menu_bills_menu">Following</string>
    <string name="menu_legislators_following">Following</string>
    <string name="menu_legislators_state">States</string>
    <string name="menu_legislators_house">House</string>
    <string name="menu_legislators_senate">Senate</string>
    <string name="menu_votes_recent">Votes</string>
    <string name="bill_sort">Sort by</string>
    <string name="bill_sort_newest">Newest</string>
    <string name="bill_sort_best">Best</string>
    <string name="menu_notification_settings">Notifications</string>
    <string name="menu_about">About</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_changelog">Changelog</string>
    <string name="notify_enable">Enable Notifications</string>
    <string name="notify_interval">Notification Interval</string>
    <string name="notify_vibration">Vibrate</string>
    <string name="notify_ringtone">Select a ringtone</string>
    <string name="one_pager_1">This app depends on access to &lt;b&gt;bulk data&lt;/b&gt; about Congress.</string>
    <string name="one_pager_2">H.R. 5882 would, in its current form, stop Congress from publishing more public data about its activity, indefinitely.</string>
    <string name="one_pager_3">Public access to government data is a universal right, and a &lt;b&gt;non-partisan&lt;/b&gt; issue.</string>
    <string name="one_pager_4">If you find this app useful, consider calling your Representative to tell them that restricting access to public data on the work of Congress is unacceptable.</string>
    <string name="one_pager_button_1">Call Congress</string>
    <string name="one_pager_button_2">Learn More</string>
</resources>