<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	
          
		<CheckBoxPreference android:key="notify_enabled"
			android:title="@string/notify_enable"
			
			android:defaultValue="false"
			/>
		
		<ListPreference android:key="notify_interval"
			android:title="@string/notify_interval"
			android:defaultValue="15"
			
			android:entries="@array/notify_interval_names"
			android:entryValues="@array/notify_interval_codes"
			
			android:dependency="notify_enabled" 
			/>
			
		<CheckBoxPreference android:key="notify_vibration"
			android:title="@string/notify_vibration"
			
			android:defaultValue="true"
			
			android:dependency="notify_enabled"
			/>
		
		<RingtonePreference android:key="notify_ringtone"
			android:title="@string/notify_ringtone"
			
			android:ringtoneType="notification"
			android:showDefault="true"
			android:showSilent="true"
			
			android:dependency="notify_enabled"
			/>
		
	
</PreferenceScreen>