<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<LinearLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingTop="2dp"
		android:paddingBottom="8dp"
		android:paddingLeft="8dp"
		android:paddingRight="8dp"
		>
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			
			android:textColor="@android:color/white"
			android:textSize="18sp"
			android:text="@string/first_header"
			/>
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			
			android:textColor="@android:color/white"
			android:textStyle="bold"
			android:textSize="16sp"
			android:text="@string/first_tip_1_header"
			/>
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="13dp"
			
			android:textSize="16sp"
			android:text="@string/first_tip_1_body"
			/>
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			
			android:textColor="@android:color/white"
			android:textStyle="bold"
			android:textSize="16sp"
			android:text="@string/first_tip_2_header"
			/>
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="13dp"
			
			android:textSize="16sp"
			android:text="@string/first_tip_2_body"
			/>
			
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			
			android:textColor="@android:color/white"
			android:textStyle="bold"
			android:textSize="16sp"
			android:text="@string/first_tip_3_header"
			/>
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			
			android:textSize="16sp"
			android:text="@string/first_tip_3_body"
			/>
	  
	</LinearLayout>
</ScrollView>