<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    >
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    >
	    
	    <include layout="@layout/title_bar" />
	    
	    <LinearLayout android:orientation="vertical"
	        android:layout_width="fill_parent" 
	        android:layout_height="fill_parent"
	        android:paddingLeft="15dp"
	        android:paddingRight="15dp"
	        android:paddingBottom="0dp"
	        style="@style/OnePagerContainer"
	        >
	 
		    <TextView android:id="@+id/one_pager_1"
		        android:text="@string/one_pager_1"
		        android:layout_width="fill_parent" 
	        	android:layout_height="wrap_content"
		        
		        style="@style/OnePagerText"
		        android:layout_marginBottom="8dp"
		        />
		    
		    <TextView android:id="@+id/one_pager_2"
		        android:text="@string/one_pager_2"
		        android:layout_width="fill_parent" 
	        	android:layout_height="wrap_content"
		        
		        style="@style/OnePagerText"
		        android:layout_marginBottom="8dp"
		        />
		    
		    <TextView android:id="@+id/one_pager_3"
		        android:text="@string/one_pager_3"
		        android:layout_width="fill_parent" 
	        	android:layout_height="wrap_content"
		        
		        style="@style/OnePagerText"
		        android:layout_marginBottom="8dp"
		        />
		    
		    <TextView android:id="@+id/one_pager_4"
		        android:text="@string/one_pager_4"
		        android:layout_width="fill_parent" 
	        	android:layout_height="wrap_content"
		        
		        style="@style/OnePagerText"
		        android:layout_marginBottom="5dp"
		        />
		    
		    <LinearLayout android:orientation="horizontal"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        >
		        
		        <Button android:id="@+id/one_pager_button_1"
		            android:text="@string/one_pager_button_1"
		            style="@style/OnePagerButton"
		            android:layout_marginRight="5dp"
		            />
		        
		        <Button android:id="@+id/one_pager_button_2"
		            android:text="@string/one_pager_button_2"
		            style="@style/OnePagerButton"
		            android:layout_marginLeft="5dp"
		            />
		        
		    </LinearLayout>
	    
		</LinearLayout>
	</LinearLayout>
</ScrollView>