<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	
	android:paddingTop="2dp"
	android:paddingBottom="2dp"
	android:paddingLeft="10dp"
	android:paddingRight="10dp"
	
	android:background="@color/bill_search_options"
	
	android:id="@+id/bill_search_options"
	>  		
 	
  	<RadioGroup android:orientation="horizontal"
  		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		
		<TextView
	  		android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	
	  		android:text="@string/bill_sort"
	  		android:textSize="16sp"
	  		android:textColor="@android:color/white"
	  		/>
		
	    <RadioButton android:id="@+id/bill_sort_newest" 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	
	    	android:paddingLeft="43dp"
	    	
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	
	    	android:text="@string/bill_sort_newest"
	    	android:textSize="16sp"
	    	
	    	android:checked="true"
	    	/>
	    <RadioButton android:id="@+id/bill_sort_best" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
	    	
	    	android:paddingLeft="43dp"
	    	android:text="@string/bill_sort_best"
	    	android:textSize="16sp" 
	    	/>
	    	
    </RadioGroup>
</LinearLayout>